# mattermost-data-warehouse

./: .dbt.env.example  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  airflow-requirements.txt  docker-compose-airflow.yml  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt  test.yaml
.github/workflows/: ci-airflow.yml  ci-lint.yml  ci-permifrost.yml  ci-python.yml
airflow/: pyproject.toml
airflow/dags/: airflow_utils.py
airflow/dags/extract/: contributors.py  diagnostics.py  licenses.py  push_proxy.py  releases.py
airflow/dags/general/: _helpers.py  daily_job.py  monitoring.py  snowflake_job.py  snowflake_permissions.py  weekly_job.py
airflow/dags/helpers/: cicd.py
airflow/dags/mattermost_dags/: airflow_utils.py  kube_secrets.py
airflow/dags/mattermost_dags/extract/: contributors.py  diagnostics.py  geolite.py  licenses.py  push_proxy.py  push_proxy_new.py  releases.py
airflow/dags/mattermost_dags/general/: _helpers.py  daily_job.py  monitoring.py  snowflake_job.py  snowflake_permissions.py  weekly_job.py
airflow/dags/mattermost_dags/helpers/: cicd.py
airflow/dags/mattermost_dags/monitoring/: events.py
airflow/dags/mattermost_dags/notifications/: docs_feedback.py  nps_feedback.py
airflow/dags/mattermost_dags/transformation/: data_quality.py  dbt.py  dbt_nightly.py  deferred_merge.py
airflow/dags/monitoring/: events.py
airflow/dags/tests/: test_helpers.py
airflow/dags/tests/general/: conftest.py  test_monitoring.py
airflow/dags/transformation/: data_quality.py  dbt.py  dbt_nightly.py
airflow/plugins/: __init__.py
airflow/plugins/hooks/: __init__.py  mattermost_webhook_hook.py
airflow/plugins/mattermost/: __init__.py
airflow/plugins/mattermost/hooks/: __init__.py  mattermost_webhook_hook.py
airflow/plugins/mattermost/operators/: __init__.py  mattermost_operator.py
airflow/plugins/operators/: __init__.py  mattermost_operator.py
airflow/plugins/tests/hooks/: test_mattermost_webhook.py
airflow/plugins/tests/operators/: test_mattermost_operator.py
airflow/tests/: conftest.py  test_airflow_utils.py  test_dag_integrity.py  test_helpers.py
airflow/tests/general/: test_monitoring.py
airflow/tests/general/fixtures/monitoring/: loads_fail.json  loads_success.json
airflow/tests/hooks/: conftest.py  test_mattermost_webhook.py
airflow/tests/monitoring/: test_events.py
airflow/tests/operators/: conftest.py  test_mattermost_operator.py
billing/: run_metered_nightly_billing.py  run_nightly_billing.py
dags/: _helpers.py  airflow_utils.py  kube_secrets.py
dags/billing/: nightly.py  nightly_metered_test.py  nightly_test.py
dags/development/: mattermost_monitoring_dag.py  mattermost_operator.py
dags/extract/: blapi.py  contributors.py  diagnostics.py  licenses.py  licenses_new.py  push_proxy.py  release.py  releases.py
dags/general/: _helpers.py  daily_job.py  monitoring.py  pg_job.py  pg_one_off.py  post_nps_feedback.py  snowflake_job.py  snowflake_permissions.py  weekly_job.py
dags/helpers/: __init__.py  cicd.py
dags/monitoring/: events.py
dags/tests/: conftest.py  test_airflow_utils.py  test_dag_integrity.py
dags/tests/general/: conftest.py  test_monitoring.py
dags/tests/monitoring/: test_events.py
dags/transformation/: data_quality.py  dbt.py  dbt_nightly.py  user_agent.py
docs/: Airflow.md  CLI.md  DBT-dev.md  DBT.md
extract/: utils.py
extract/pg_import/: pg_import.py  pg_import_processor.py
extract/s3_extract/: diagnostics_job.py  licenses_job.py  push_proxy_job.py  release_job.py  stage_import.py
k8s/: debugger-pod.yaml  pipelinewise-pod.yaml  pv-claim.yaml  pv.yaml
load/snowflake/: roles.yaml
plugins/hooks/: mattermost_webhook_hook.py
plugins/operators/: conftest.py  mattermost_operator.py
plugins/sensors/: stitch_sensor.py
plugins/tests/hooks/: conftest.py  test_mattermost_webhook.py
plugins/tests/operators/: conftest.py  test_mattermost_operator.py
tests/dags/: conftest.py  test_airflow_utils.py
tests/extract/: test_utils.py
tests/extract/s3_extract/: conftest.py  test_stage_import.py
tests/utils/: conftest.py  test_cloud_clearbit.py  test_github_contributors.py  test_helpers.py  test_onprem_clearbit.py  test_post_docs_data.py  test_post_nps_data.py  test_run_dbt_cloud_job.py  test_run_snowflake_queries.py  test_user_agent_parser.py
tests/utils/db/: conftest.py  test_helpers.py  test_service.py
tests/utils/geolite/: test_service.py
tests/utils/github/: test_service.py
tests/utils/packets/: __init__.py  conftest.py  test_aws.py  test_loaders.py  test_service.py
transform/mattermost-analytics/: .gitignore  README.md  dbt_project.yml  packages.yml  selectors.yml
transform/python/: github_contributors
transform/snowflake-dbt/: dbt_project.yml  packages.yml
transform/sql/: account_arr.sql  account_health_score.sql  account_segment.sql  account_type.sql  connect_retry.sql  lead_account.sql  lead_mql.sql  opportunity_arr.sql  opportunity_snapshot.sql  opportunitylineitem_arr.sql  opportunitylineitem_snapshot.sql  owner_segment_updates.sql  pg_update_account_health_score.sql  pg_update_opportunity_time_in_stage.sql  renewal_cleanup.sql  schiff_one_off.sql  tasks_filtered.sql  test.sql  update_account_arr_and_seats.sql  update_account_telemetry.sql  update_onboarding_telemetry.sql  update_opportunitylineitem_amounts.sql  update_tasks_and_lead_connected.sql  update_unsequenced_outreach_leads.sql
utils/: cloud_clearbit.py  dashboard_export.py  github_contributors.py  helpers.py  onprem_clearbit.py  post_docs_data.py  post_nps_data.py  run_dbt_cloud_job.py  run_snowflake_queries.py  run_sql.py  twitter_mentions.py  update_chronological_sequence.py  user_agent_parser.py
utils/cli/: context.py  logging.py
utils/db/: __main__.py  helpers.py  service.py
utils/geolite/: __main__.py  service.py
utils/github/: __main__.py  service.py
utils/nps/: nps_feedback_categorization.py
utils/packets/: __main__.py  aws.py  loaders.py  service.py
utils/push_proxy/: __main__.py  service.py
utils/rudderstack/: __main__.py  service.py
(+1181 files in other folders)
